<resources>
    <string name="app_name">iAsset</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="spinner_title">Select User Type</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- API KEYS AND IDS -->
    <string name="database_url">https://console.firebase.google.com/project/mydb-3b605/database/mydb-3b605-default-rtdb/data/~2F?utm_source=studio</string>
    <string name="firebase_api">AIzaSyD9OFEuUb3IMI03XRgZt0qpV8PcCxJWaMc</string>
    <string name="firebase_application_id">1:546276846864:android:0308aa1bcf31a7587e8995</string>
    <string name="google_maps_api">AIzaSyBVb8MwFJO1c_fYzXl8J4iQOCcL0ycnOyc</string>
    <string name="issued_assets">Issued Assets</string>
    <string name="iasset">iAsset</string>
    <string name="intelligent_asset_management">Intelligent Asset </string>
    <string name="version_1_0">Version: 1.0</string>
    <string name="features">Features</string>
    <string name="credits">Credits</string>
    <string name="copyright">Copyright</string>
    <string name="generate_qr">Generate QR</string>
    <string name="next">Next</string>

</resources>
